fix: enable guest auth in production mode

--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -18,8 +18,10 @@ backend:
       password: ${POSTGRES_PASSWORD}
 
 auth:
+  environment: development
   providers:
-    guest: {}
+    guest:
+      dangerouslyAllowOutsideDevelopment: true
 
 catalog:
   locations:
