test: trigger canary rollout

--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -1,5 +1,9 @@
 app:
   baseUrl: https://backstage.kubefurlan.com
+  title: Kube Furlan IDP
+
+organization:
+  name: Kube Furlan
 
 backend:
   baseUrl: https://backstage.kubefurlan.com
