--- a/app-config.production.yaml
+++ b/app-config.production.yaml
@@ -7,7 +7,8 @@ organization:
 
 backend:
   baseUrl: https://backstage.kubefurlan.com
-  listen: ':7007'
+  #listen: ':7007'
+  listen: ':9999'
   cors:
     origin: https://backstage.kubefurlan.com
   auth:
